# NAUTILUS_BINANCE_STARTER_PACK

./: .deadcode-allowlist  .dockerignore  .editorconfig  .env  .env.dryrun.live  .env.example  .env.live  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  =6.20  AUTONOMOUS_TRADING_DEMO.md  Audit Checklist.md  BIGFILES.txt  CHANGELOG.md  CLINE_TICKETS.md  CODEOWNERS  CONTRIBUTING.md  DEPLOY.md  Dashboard v2 Data Flow Architecture.md  Dockerfile  ENGINE_TRACK.md  Makefile  NAUTILUS_BINANCE_STEP_BY_STEP.md  README.md  README_ALLOCATOR.md  README_DEPLOYMENT.md  READY_TO_DEPLOY  ROADMAP.md  SECURITY.md  STATE_UI_LOOP_DISCOVERY.json  STATE_UI_LOOP_DOCS.json  STATE_UI_LOOP_PATCHES.json  STATE_UI_LOOP_TESTS.json  architecture_whitepaper.md  auditor.py  bandit.yaml  cline_targets_paths.txt  cline_targets_with_lines.txt  (+35 more)
.stfolder/: syncthing-folder-832f85.txt
NAUTILUS_BINANCE_STARTER_PACK/: CLINE_TICKETS.md
adapters/: account_provider.py  binance_hist.py  ibkr_hist.py
audit_inputs/: BIGFILES.txt  FILE_LIST.txt  TOP_CONFIGS.txt
audit_out/: data_map.csv  retention_policy.md
audit_state/: STATE_00_plan.json  STATE_00_recon.json  STATE_01_config_deploy.json  STATE_01_containers.json  STATE_02_arch.json  STATE_02_network.json  STATE_03_config.json  STATE_04_observability.json  STATE_05_strategies.json  STATE_06_compliance.json  STATE_06_ml.json  STATE_API.json  STATE_ARCH.json  STATE_AUTHZ.json  STATE_CFG.json  STATE_CFG_DYN.json  STATE_CONFIG_DYN.json  STATE_CTRL_API.json  STATE_CTRL_UI.json  STATE_DEPLOYMENT.json  STATE_DRYRUN.json  STATE_ENGINE_CORE.json  STATE_FUNDS.json  STATE_FUNDS_ALLOC.json  STATE_HITL.json  STATE_LOOP_LEARN.json  STATE_OBSERVABILITY.json  STATE_RESILIENCE.json  STATE_ROLLUP.json  STATE_ROLLUP_INTERIM.json  STATE_SELECT.json  STATE_STRATEGY_SELECT.json  STATE_SYMBOLS.json  STATE_SYMBOL_UNIVERSE.json  STATE_UI_LOOP_DISCOVERY.json  STATE_UI_LOOP_PATCHES.json
backtests/: README.md  data_quality.py  engine.py  fills.py  momentum_backtest.py  prepare_h2_training.py  run_backtest.py  scalping_backtest.py  slippage_report.py  trend_follow_backtest.py
conf/: event_denylist.txt  params.yaml
config/: external_feeds.example.yaml  external_feeds.yaml  live_strategy.toml  runtime.example.yaml  runtime.yaml  screener.yaml  situations.json  universe.yaml
dashboard/: app.py  prom_setup.py
data/: inspect_trades_cnt.py  situations.json  top_symbols.txt
deck/: 404.html  app.js  dashboard.html  index.html  index.txt  styles.css
docker/: entrypoint_dash.sh
docs/: ANTIGRAVITY_AUDIT.md  AUTONOMOUS_LOOP.md  AUTOTRAIN_IMPLEMENTATION_GUIDE.md  BACKTEST_SUITE_GUIDE.md  BACKTEST_SUITE_README.md  BINANCE_DATA_AUDIT.md  Comprehensive Framework for a Binance Crypto Trading Bot.md  DEV_GUIDE.md  FEATURE_FLAGS.md  INDEX.md  INTEGRATION_AUDIT.md  ML_SERVICE_INTEGRATION.md  OBSERVABILITY.md  OPS_RUNBOOK.md  PROJECT_OVERVIEW.md  README-BINANCE-BACKFILL.md  README.md  RUNBOOK — Trading Engine.md  SYSTEMIC_REMEDIATION.md  SYSTEM_DESIGN.md  api_guidelines.md  command_center_openapi.yaml  control_action_audit.schema.json  network-dns-fix.md  permission_matrix.md  secrets.md
engine/: __init__.py  app.py  brain.py  config.py  dynamic_policy.py  exchange_wrapper.py  idempotency.py  logging_utils.py  metrics.py  neuro_optimizer.py  ops_auth.py  policies.yaml  reconcile.py  risk.py  risk_guardian.py  risk_quarantine.py  risk_var.py  riskrails_adapter.py  state.py  strategy.py  universe.py  verify_prompt.py
frontend/: .eslintrc.cjs  README.md  index.html  lint_output.txt  ops_a11y_testplan.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tmp_collect_console.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
ml_service/: app.py  hierarchical_hmm.py
mockup_analysis/: README.md
nautilus-ui/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
nautilus-ui-deck/: NAUTILUS_UI_DECK.md
notebooks/: M15_Calibration.ipynb
ops/: Dockerfile  README_DECK.md  __init__.py  aggregate_exposure.py  alerts.rules.yml  allocator.py  allocator_daemon.py  auto_probe.py  background.py  backtest_uploader.py  calibrate_fast.sh  calibrate_paper.sh  calibrate_policy.py  canary_manager.py  canary_sim.py  capital_allocations.json  capital_allocator.py  capital_policy.json  capital_policy.py  compose.observability.yml  deck_api.py  deck_metrics.py  docker-compose-add-deck.snippet.yml  docker-compose-remove-grafana.txt  docker-compose.with-ops-dep.yml  engine_client.py  env.binance  env.bybit  env.example  environment.py  export_pnl.py  exposure_collector.py  funds.yaml  governance_daemon.py  ibkr_prices.py  idempotency.py  loop_guard.py  m16_reinforce.py  m16_reinforce.sh  m17_train_macro.py  (+70 more)
pipeline/: build_features.py  replay_situations.py  report_backtest.py  seed_feedback_api.py  sim_exec.py  train_bandit_offline.py
prometheus/: prometheus.yml
screener/: alpha.py  data.py  features.py  service.py  strategies.py
scripts/: audit.sh  auto_promote_if_better.py  backtest_ensemble.py  backtest_hmm.py  capture_loop_guard_logs.sh  check_kraken_exporter.sh  clean_docker.py  cleanup_legacy.sh  daily_summary.py  daily_summary.sh  dry_run.sh  final_fix.py  fix_ops.py  fix_web_ui.py  fix_wrong_files.py  force_repair.py  generate_env_example.py  git_hard_fix.py  hmm_sanity_check.py  model_leaderboard.py  model_leaderboard_viz.py  model_registry.py  optimize_presets.py  optimizer.py  prune_docker.py  repro_infinite_loop.sh  restore_code.py  restore_system.py  simulate_venue_errors.py  soak_submit_ack.py  strip_dead_code.sh  supervisor.py  surgical_fix.py  tap_ws_strategies.py  telegram_ping.sh  test_allocation.py  test_dynamic_risk.py  test_hardening.py  test_race.py  test_sniper.py  (+4 more)
secrets/: grafana_admin_password  (+1 more)
secrets.example/: README.md
(+10806 files in other folders)
