[project]
name = "nautilus-hmm-binance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "nautilus_trader[binance]",
  "fastapi",
  "uvicorn",
  "pandas",
  "numpy",
  "scikit-learn",
  "xgboost",
  "hmmlearn",
  "duckdb",
  "pyarrow",
  "python-dotenv",
  "httpx"
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
